[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chainpulse"
version = "0.1.0"
description = "AI-powered Bitcoin network intelligence in your terminal. Ask questions, get structured analysis."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bortlesboat" },
]
keywords = ["bitcoin", "ai", "cli", "blockchain", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/Bortlesboat/chainpulse"
Repository = "https://github.com/Bortlesboat/chainpulse"

[project.scripts]
chainpulse = "chainpulse.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "respx>=0.21.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src/chainpulse"]
